test/2/type/sub/F_CIII_V-F_CII_V.err
test/2/type/sub/F_CIII_V-F_CII_V.ploy:1:3-12: type error: annotated: actual struct has 2 positional fields; expected struct has 3. actual type: (Int Int)
| f:(Int Int)%Void = fn (Int Int Int)%Void;
    ~~~~~~~~~
test/2/type/sub/F_CIII_V-F_CII_V.ploy:1:23-36: note: expected type: (Int Int Int)
| f:(Int Int)%Void = fn (Int Int Int)%Void;
                        ~~~~~~~~~~~~~
