test/2/type/sub/F_CIII_V-F_CII_V.ploy
f:(Int Int)%Void = fn (Int Int Int)%Void;

main = f(0 0 0)
